<resources>
    <string name="app_name">PaceConnect</string>
    <string name="welcome_title_1">Welcome to</string>
    <string name="welcome_title_2">Pace Connect</string>
    <string name="welcome_pace_ID">"Pace Email"</string>
    <string name="welcome_password">Password</string>
    <string name="welcome_forgot_password">Forgot Password</string>
    <string name="welcome_register">Register</string>
    <string name="welcome_copy_right">Copyright © 2018 PACE CS639 PLV, All Rights Reserved.</string>

    <string name="sign_out">sign out</string>

    <string name="auth_sign_in_toast">You\'re now signed in. Welcome to Pace Connect!</string>

    <string name="name_text_view">Name:</string>
    <string name="email_text_view">Email:</string>
    <string name="send_button_label">Send</string>
    <string name="chat_activity_label">Chat</string>
    <string name="rate_activity_label">Rate Professor</string>
    <string name="setting_activity_label">Setting</string>
    <string name="map_activity_label">Map</string>

</resources>
